# png2svg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test_png2svg.py
png2svg/: __init__.py  cli.py  converter.py
